# arboretum

./: .gitignore  LICENSE  README.md  index.html  newsletter.py  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: generate-icons.mjs
scripts/quality-test/: harness.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: get_secret.rs
src-tauri/icons/: icon.icns
src-tauri/src/: claude_api.rs  config.rs  conflict.rs  email.rs  gemini.rs  hardware.rs  lib.rs  local_llm.rs  main.rs  pipeline.rs  scheduler.rs  secrets.rs
src-tauri/src/sources/: arxiv.rs  mod.rs  openalex.rs
src/components/: ArboretumLogo.tsx  EmailSetupWizard.tsx  GrowingTree.tsx  LocalAiSetup.tsx  NewsletterViewer.tsx  OverlapCard.tsx  ProfileCard.tsx  ProgressLog.test.tsx  ProgressLog.tsx  Serif.tsx  Sidebar.tsx  SmallCaps.tsx  SproutIcon.tsx  TopicCard.tsx  WoodRings.tsx
src/lib/: ConflictContext.tsx  GenerationContext.tsx  LocalPullContext.tsx  api.test.ts  api.ts  theme.ts  types.test.ts  types.ts
src/pages/: Help.tsx  History.tsx  Home.test.tsx  Home.tsx  Scanner.tsx  Settings.tsx
src/styles/: index.css
src/test/: setup.ts
