[package]
name = "research-newsletter"
version = "0.1.0"
description = "Arboretum — AI-curated research digests"
authors = []
license = ""
repository = ""
default-run = "research-newsletter"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "research-newsletter"
path = "src/main.rs"

[lib]
name = "research_newsletter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
pulldown-cmark = "0.12"
notify-rust = "4"
regex = "1"
base64 = "0.22"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
futures-util = "0.3"
bytes = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
